# ipwgml

./: .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  conda_environment.yml  pyproject.toml
.github/workflows/: install_and_test.yml
docs/: _config.yml  _toc.yml  api_documentation.md  dataset.md  evaluation.md  getting_started.md  intro.md
docs/api/: data.rst  evaluation.rst  input.rst  metrics.rst  target.rst
docs/api/pytorch/: datasets.rst  pytorch.rst
docs/notebooks/: evaluate_gprof.ipynb  evaluate_imerg.ipynb  input_and_target_data.ipynb
docs/notebooks/pytorch/: convolutional_neural_network.ipynb  fully_connected.ipynb
ipwgml/: config.py  data.py  definitions.py  evaluation.py  input.py  metrics.py
ipwgml/pytorch/: data.py
notebooks/pytorch/: fully_connected.ipynb
src/ipwgml/: __init__.py  baselines.py  cli.py  config.py  data.py  definitions.py  evaluation.py  input.py  logging.py  metrics.py  plotting.py  target.py  tiling.py  utils.py
src/ipwgml/files/: ipwgml.mplstyle
src/ipwgml/files/baselines/: gprof_v07a_gmi.nc  imerg_final_v07b_gmi.nc
src/ipwgml/files/stats/: ancillary.nc  eia_gmi.nc  obs_geo.nc  obs_geo_ir.nc
src/ipwgml/pytorch/: __init__.py  datasets.py
tests/: conftest.py  test_baselines.py  test_config.py  test_data.py  test_evaluation.py  test_input.py  test_metrics.py  test_target.py  test_tiling.py  test_utils.py
tests/pytorch/: test_data.py  test_datasets.py  test_pytorch.py
